sort.baseball.InsertBaseball.scala.error
Compilation error:
InsertBaseball:32: error: not found: value getNombresBases
  var nbBases=getNombresBases()
              ^